--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@
 
 body {
     font-family: Arial, sans-serif;
+    background-color: #F0F2F5; 
 }
 
 .app {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     width: 100%;
     min-height: 100vh;
@@ -23,7 +24,7 @@ body {
 }
 
 .upper-header {
-    width: 80%;
+    width: 97%;
     padding: 20px;
     display: flex;
     justify-content: right;
@@ -34,9 +35,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 95%;
     padding: 20px;
-    background-color: #3E82F7;
+    background-color: #4A90E2;
     color: #FFFFFF;
 }
 
@@ -52,8 +53,8 @@ body {
 
 .content {
     display: flex;
-    justify-content: space-between;
-    width: 80%;
+    justify-content: space-around;
+    width: 97%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -64,12 +65,14 @@ body {
 
 textarea {
     width: 100%;
-    min-height: 300px;
+    min-height: 500px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
     resize: vertical;
+    background-color: #FFFFFF;
+    color: #222222;
 }
 
 textarea.night {
@@ -93,6 +96,8 @@ select {
     font-size: 16px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
+    background-color: #FFFFFF;
+    color: #222222;
 }
 
 select.night {
@@ -101,10 +106,10 @@ select.night {
 }
 
 .footer {
-    width: 100%;
+    width: 95%;
     padding: 20px;
     text-align: center;
-    background-color: #3E82F7;
+    background-color: #4A90E2; 
     color: #FFFFFF;
 }
 
@@ -118,12 +123,12 @@ button {
     border: none;
     border-radius: 5px;
     background-color: #FFFFFF;
-    color: #3E82F7;
+    color: #4A90E2;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #CCCCCC;
+    background-color: #B9D0F5;
 }
 
 button.night {
@@ -153,7 +158,7 @@ button.night:hover {
 
 .spinner {
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #3E82F7;
+    border-top: 6px solid #4A90E2;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -168,7 +173,7 @@ border-top: 6px solid #FFFFFF;
 .processing-text {
 font-size: 16px;
 font-weight: bold;
-color: #3E82F7;
+color: #4A90E2;
 }
 
 .processing-text.night {
@@ -182,4 +187,33 @@ color: #FFFFFF;
 100% {
     transform: rotate(360deg);
 }
+}
+
+.copy-button-container {
+    position: relative;
+    top: -4px;
+}
+
+#copy-button {
+position: absolute;
+bottom: 5px;
+right: 5px;
+background-color: transparent;
+border: none;
+cursor: pointer;
+padding: 0;
+width: 24px;
+height: 24px;
+}
+
+#copy-button .material-icons {
+    font-size: 24px;
+}
+
+#copy-button:hover .material-icons {
+opacity: 0.7;
+}
+
+#copy-button:active .material-icons {
+opacity: 0.5;
 }
